Added adv and ddv stats
